<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/gradient"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/left_guideline"
        app:layout_constraintGuide_percent=".05"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/left_label_guideline"
        app:layout_constraintGuide_percent=".25"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/left_center_guideline"
        app:layout_constraintGuide_percent=".50"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/left_quarter_guideline"
        app:layout_constraintGuide_percent=".70"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/right_guideline"
        app:layout_constraintGuide_percent=".95"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top_guideline"
        app:layout_constraintGuide_percent=".05"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_guideline"
        app:layout_constraintGuide_percent="0.95"
        android:orientation="horizontal"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/left_label_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_guideline"
        android:textSize="12sp"
        android:text="@string/lbl_id"
        android:textColor="@color/colorAccent"
        android:textAlignment="textStart"
        android:id="@+id/tv_lbl_id"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/left_label_guideline"
        app:layout_constraintRight_toRightOf="@+id/left_center_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_guideline"
        android:textSize="12sp"
        android:textColor="@color/secondaryTextColor"
        android:textAlignment="textStart"
        android:id="@+id/tv_id"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/left_center_guideline"
        app:layout_constraintRight_toRightOf="@+id/left_quarter_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_guideline"
        android:textSize="12sp"
        android:text="@string/lbl_date"
        android:textColor="@color/colorAccent"
        android:textAlignment="textStart"
        android:id="@+id/tv_lbl_date"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/left_quarter_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_guideline"
        android:textSize="12sp"
        android:textColor="@color/secondaryTextColor"
        android:textAlignment="textStart"
        android:id="@+id/tv_date"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/left_label_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_date"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:text="@string/lbl_mount"
        android:textColor="@color/colorAccent"
        android:textAlignment="textStart"
        android:id="@+id/tv_lbl_mount"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/left_label_guideline"
        app:layout_constraintRight_toRightOf="@+id/left_center_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_date"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:textColor="@color/secondaryTextColor"
        android:textAlignment="textStart"
        android:id="@+id/tv_mount"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/left_center_guideline"
        app:layout_constraintRight_toRightOf="@+id/left_quarter_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_date"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:text="@string/lbl_price"
        android:textColor="@color/colorAccent"
        android:textAlignment="textStart"
        android:id="@+id/tv_lbl_price"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/left_quarter_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_date"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:textColor="@color/secondaryTextColor"
        android:textAlignment="textStart"
        android:id="@+id/tv_price"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/left_label_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_mount"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:text="@string/lbl_product"
        android:textColor="@color/colorAccent"
        android:textAlignment="textStart"
        android:id="@+id/tv_lbl_product"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/left_label_guideline"
        app:layout_constraintRight_toRightOf="@+id/left_center_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_mount"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:textColor="@color/secondaryTextColor"
        android:textAlignment="textStart"
        android:id="@+id/tv_product"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/left_center_guideline"
        app:layout_constraintRight_toRightOf="@+id/left_quarter_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_mount"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:text="@string/lbl_weight"
        android:textColor="@color/colorAccent"
        android:textAlignment="textStart"
        android:id="@+id/tv_lbl_weight"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/left_quarter_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_mount"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:textColor="@color/secondaryTextColor"
        android:textAlignment="textStart"
        android:id="@+id/tv_weight"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/left_label_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_product"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:text="@string/lbl_client"
        android:textColor="@color/colorAccent"
        android:textAlignment="textStart"
        android:id="@+id/tv_lbl_client"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/left_label_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_product"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:textColor="@color/secondaryTextColor"
        android:textAlignment="textStart"
        android:id="@+id/tv_client"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/left_label_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_client"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:text="@string/lbl_operator"
        android:textColor="@color/colorAccent"
        android:textAlignment="textStart"
        android:id="@+id/tv_lbl_operator"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/left_label_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_client"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:textColor="@color/secondaryTextColor"
        android:textAlignment="textStart"
        android:id="@+id/tv_operator"/>

</android.support.constraint.ConstraintLayout>
